--- a/style.css
+++ b/style.css
@@ -13,10 +13,28 @@
 }
 
 .input-form{
+	width:40%;
 	display: flex;
 	flex-direction: column;
 }
 
 .input-form input{
 	margin-bottom: 10px;
+}
+
+.title-input{
+	width: 100%;
+	height:50px;
+}
+
+.body-input{
+	width:100%;
+	height:200px;
+	margin-bottom: 10px;
+}
+
+.submit-btn{
+	width:100%;
+	height:50px;
+	margin-bottom:10px;
 }
